# ffuf-wrapper

./: Cargo.toml  request.txt
src/: lab.rs  main.rs
